# sudoku-solver

./: .gitignore  README.md  main.py  pyproject.toml  sudoku-cv.py  sudoku-event.py
sudoku/: device.py  params.py  sudoku_detect.py  sudoku_solver.py
