[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = ""
authors = ["eliozh <eliozhou@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"
pure-python-adb = "^0.3.0.dev0"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
